2009-10-22       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Range.mod:  allow second argument
	  to DEC and INC to be >=0 rather than MIN(des).  Fixes
	  a bug reported by James Cox <jvcox@sandia.gov>.
	* gm2/gm2-libs-ch/ldtoa.c:  reordered the headers to
	  ensure that _ISOC99_SOURCE is set before stdlib.h is
	  read so that the prototypes for strtold are correct.
	  Fixes a long real numeric conversion bug reported by
	  James Cox <jvcox@sandia.gov>.

2009-10-16       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/FIO.mod:  fixed bug in FIO.FindPosition
	  as reported by James Cox <jvcox@sandia.gov>.

2009-10-15       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  removed options which are not yet 
	  implemented -fwholevalue, -fno-wholevalue.
	* gm2/lang-options.h:  removed options which are not yet 
	  implemented -fwholevalue, -fno-wholevalue.
	* gm2/gm2-compiler/M2Quads.mod:  add Convert to
	  (MoveWithMode) if the types are different when moving
	  data indirectly.  New function (doVal) which is used to
	  change type during indirection if necessary.
	* gm2/gm2-compiler/M2Base.mod:  fix bug in unbounded array
	  dimension checking reported by
	  Scott Iverson (testsuite/gm2/pim/pass/ptrarray3.mod).
	* gm2/gm2-compiler/M2Quads.mod:  fix bug in unbounded array
	  dimension checking reported by
	  Scott Iverson (testsuite/gm2/pim/pass/ptrarray3.mod).

2009-10-14       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Base.mod:  allow sized SYSTEM types
	  (which are really pseudonyms of pervasive type to be
	   VAR parameter compatible).  Call IsSameSizePervasiveType.
	* gm2/gm2-compiler/M2System.def:  define and export
	  IsSameSizePervasiveType.
	* gm2/gm2-compiler/M2System.mod:  implement
	  IsSameSizePervasiveType.
	* gm2/gm2.texi:  removed -fbounds and introduced -fno-nil
	  -fwholediv, -fno-wholediv, -fwholevalue, -fno-wholevalue,
	  -findex, -fno-index, -frange and -fno-range.
	* gm2/lang-options.h:  removed -fbounds and introduced options