@@ -1,3 +1,10 @@
+2009-10-23       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gm2-libs-ch/dtoa.c:  fixes to dtoa_calcdecimal
+	  so that the correct number of digits after the decimal 
+	  place is returned.  Fixes a bug reported by James
+	  Cox <jvcox@sandia.gov>.
+	
 2009-10-22       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2-compiler/M2Range.mod:  allow second argument
